--- a/ss4_git_html/bai_tap/tao_cv_ca_nhan.html
+++ b/ss4_git_html/bai_tap/tao_cv_ca_nhan.html
@@ -2,24 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CV Nguyễn Văn A</title>
+    <title>CV Nguyễn Việt Hoàng</title>
 </head>
 <body>
-    <h1>CV Nguyễn Văn A</h1>
+    <h1>CV Nguyễn Việt Hoàng</h1>
     <p>
-        <img src="https://znews-photo.zingcdn.me/w660/Uploaded/qhj_yvobvhfwbv/2018_07_18/Nguyen_Huy_Binh1.jpg" alt="CV Cá Nhân" style="width: 200px;">
-        <h4> Họ Và Tên: Nguyễn Văn A
+        <img src="https://vcdn1-giaitri.vnecdn.net/2023/01/04/mono-2-1672831360-2966-1672832004.jpg?w=1200&h=0&q=100&dpr=1&fit=crop&s=IwzfJrCRPol6khtxasxR1Q" alt="CV Cá Nhân" style="width: 200px;">
+        <h4> Họ Và Tên: Nguyễn Việt Hoàng
             <br>
-             Quê Quán: Hà Nội
+             Giới tính: Nam
+            <br>
+             Năm sinh: 20-1-2000
+            <br>
+             Quê Quán: Thái Bình
             <br>
              Trình độ học vấn: Đại Học
+            <br>
+             Tình trạng hôn nhân: Chưa kết hôn
+            <br>
+             Công việc: Ca sĩ
+            <br>
+             Bài hát nổi bật: Waiting For You
         </h4>
         <h4>Video giới thiệu</h4>
 
-    <video src="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcRKCR3mXcDimPjYpDcZvOwrfs9YHUB8bk6H_A"width="320" height="240" controls>
-            <source src="movie.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
-            Your browser does not support the video tag.></video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/udlXfqkEJ9I?clip=UgkxgP61BV8eOYLS_sES_Jihw7cBjrdaXEz-&amp;clipt=EPDbAxj4ggQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h4>
             <a target="_blank" href="https://codegym.vn/">Codegym</a>
         </h4>
