--- a/ss4_git_html/bai_tap/tao_cv_ca_nhan.html
+++ b/ss4_git_html/bai_tap/tao_cv_ca_nhan.html
@@ -23,12 +23,15 @@
              Công việc: Ca sĩ
             <br>
              Bài hát nổi bật: Waiting For You
+            <br>
+            <a target="_blank" href="https://nhanvatshowbiz.com/mono">Tiểu Sử</a>
+
         </h4>
         <h4>Video giới thiệu</h4>
-
     <iframe width="560" height="315" src="https://www.youtube.com/embed/udlXfqkEJ9I?clip=UgkxgP61BV8eOYLS_sES_Jihw7cBjrdaXEz-&amp;clipt=EPDbAxj4ggQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <h4>
-            <a target="_blank" href="https://codegym.vn/">Codegym</a>
-        </h4>
+        <h4>Ghi Âm</h4>
+    <iframe scrolling="no" width=320 height=90 src=https://zingmp3.vn/embed/song/ZZFDAZ89?start=false frameborder="0" allowfullscreen="true"/>
+
+
     </p>
 </body>
