--- a/ss5_form_table/bai_tap/tao_form_don_gian.html
+++ b/ss5_form_table/bai_tap/tao_form_don_gian.html
@@ -5,9 +5,9 @@
     <title>Tạo Form Đơn Giản</title>
 
 </head>
-<body style="background: paleturquoise;"  >
+<body>
 <center>
-    <form action="/student" method="get" >
+    <form action="/student" method="get" style="background: paleturquoise;width: 400px; height: 300px" >
         <font aria-label="">
             <fieldset style="background: aliceblue; width: 350px; height: 270px">
                 <legend style="background: red; text-align: center">SỞ THÍCH CỦA BẠN</legend>
@@ -51,6 +51,48 @@
                 <input type="submit" value="Gửi Thông Tin">
             </fieldset>
         </font>
+    </form>
+    <form action="/student" method="get" style="background-color: khaki; width: 350px; height: 280px">
+        <h2 style="background: paleturquoise; color: blue;">Đăng Kí Học Viên</h2>
+        <table style="color: blue ">
+            <tr>
+                <th>Họ Và Tên</th>
+                <th><label><input name="name" value="họ và tên" type="text"></label><br></th>
+            </tr>
+            <tr>
+                <td> Ngày Sinh</td>
+                <td><label><input name="dob" value="ngày sinh" type="text"></label><br></td>
+            </tr>
+            <tr>
+                <td> Giới tính</td>
+                <td><label><input name="sex" value="male" type="radio">Nam</label>
+                    <label><input name="sex" value="female" type="radio">Nữ</label><br></td>
+            </tr>
+            <tr>
+                <td>Địa chỉ</td>
+                <td><textarea></textarea></td>
+            </tr>
+            <tr>
+                <td>Lớp</td>
+                <td><select>
+                    <option>-Chọn Lớp-</option>
+                    <option>Lớp 1</option>
+                    <option>Lớp 2</option>
+                    <option>Lớp 3</option>
+                    <option>Lớp 4</option>
+                </select></td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td><input type="text" value="email"><br></td>
+            </tr>
+            <tr>
+                <td>Điện thoại</td>
+                <td><input type="text>" value="0123456789"><br></td>
+            </tr>
+        </table>
+        <label><input type="reset" value="Nhập lại"></label>
+        <label><input type="submit" value="Đăng Ký"></label>
     </form>
 </center>
 </body>
