--- a/ss5_form_table/bai_tap/tao_bang_nang_cao.html
+++ b/ss5_form_table/bai_tap/tao_bang_nang_cao.html
@@ -7,7 +7,7 @@
         table{
             border-collapse: collapse;
             width: 15%;
-
+            background-color: orange;
         }
         td{
             border: 1px solid
@@ -15,7 +15,7 @@
         }
     </style>
 </head>
-<body style="background-color: orange">
+<body >
     <table>
         <thead>
             <th></th>
