--- a/ss4_git_html/bai_tap/tao_cv_ca_nhan.html
+++ b/ss4_git_html/bai_tap/tao_cv_ca_nhan.html
@@ -7,8 +7,8 @@
 <body>
     <h1>CV Nguyễn Việt Hoàng</h1>
     <p>
-        <img src="https://vcdn1-giaitri.vnecdn.net/2023/01/04/mono-2-1672831360-2966-1672832004.jpg?w=1200&h=0&q=100&dpr=1&fit=crop&s=IwzfJrCRPol6khtxasxR1Q" alt="CV Cá Nhân" style="width: 200px;">
-        <p> Họ Và Tên: Nguyễn Việt Hoàng
+        <img src="https://vcdn1-giaitri.vnecdn.net/2023/01/04/mono-2-1672831360-2966-1672832004.jpg?w=1200&h=0&q=100&dpr=1&fit=crop&s=IwzfJrCRPol6khtxasxR1Q" alt="CV Cá Nhân" style="width: 200px;"><br>
+         Họ Và Tên: Nguyễn Việt Hoàng
             <br>
              Giới tính: Nam
             <br>
@@ -26,7 +26,6 @@
             <br>
             <a target="_blank" href="https://nhanvatshowbiz.com/mono">Tiểu Sử</a>
 
-        <p>
         <h4>Video giới thiệu</h4>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/udlXfqkEJ9I?clip=UgkxgP61BV8eOYLS_sES_Jihw7cBjrdaXEz-&amp;clipt=EPDbAxj4ggQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h4>Ghi Âm</h4>
