--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieu_du_lieu_toan_tu/tinh_chu_vi_hinh_tron.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieu_du_lieu_toan_tu/tinh_chu_vi_hinh_tron.html
@@ -16,11 +16,10 @@
 <script>
 
     function getValue() {
-        const PI = 3.14
+        const PI = 3.14;
         let radius = +document.getElementById("radius").value;
-        let perimeter = 2 * radius * PI
-        // alert(perimeter)
-        document.getElementById('perimeter').innerText = perimeter
+        let perimeter = 2 * radius * PI;
+        document.getElementById('perimeter').innerText = perimeter;
     }
 </script>
 
