--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieu_du_lieu_toan_tu/tinh_dien_tich_hinh_tron.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieu_du_lieu_toan_tu/tinh_dien_tich_hinh_tron.html
@@ -14,11 +14,10 @@
 <script>
 
     function getValue(){
-        const PI = 3.14
+        const PI = 3.14;
         let radius = +document.getElementById("radius").value;
-        let acreage = radius*radius*PI
-        // alert(acreage)
-        document.getElementById('acreage').innerText = acreage
+        let acreage = radius*radius*PI;
+        document.getElementById('acreage').innerText = acreage;
     }
 </script>
 </html>
