--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/chuyen_doi_tien_te.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/chuyen_doi_tien_te.html
@@ -59,22 +59,22 @@
         let toCurrency = document.getElementById('toCurrency').value;
         if (fromCurrency === "VND") {
             if (toCurrency === 'USD') {
-                amount = amount/23000
-            } else {
-                amount = amount
+                amount = amount/23000;
+            }
+            else {
+                amount = amount;
             }
         }
         else {
             if(toCurrency === 'VND'){
-                amount = 23000 * amount
+                amount = 23000 * amount;
             }
             else{
-                amount = amount
+                amount = amount;
             }
         }
             document.getElementById('result').innerText = amount;
     }
-
 
 </script>
 </html>
