--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/ung_dung_may_tinh.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/ung_dung_may_tinh.html
@@ -21,28 +21,28 @@
 </body>
 <script>
     function addNumber(){
-        let a = +document.getElementById('number1').value;
-        let b = +document.getElementById('number2').value;
-        let c = a + b;
-        document.getElementById('result').innerText = c;
+        let number1 = +document.getElementById('number1').value;
+        let number2 = +document.getElementById('number2').value;
+        let sum = number1 + number2;
+        document.getElementById('result').innerText = sum;
     }
     function subNumber(){
-        let a = +document.getElementById('number1').value;
-        let b = +document.getElementById('number2').value;
-        let c = a - b;
-        document.getElementById('result').innerText = c;
+        let number1 = +document.getElementById('number1').value;
+        let number2 = +document.getElementById('number2').value;
+        let sub = number1 - number2;
+        document.getElementById('result').innerText = sub;
     }
     function multiNumber(){
-        let a = +document.getElementById('number1').value;
-        let b = +document.getElementById('number2').value;
-        let c = a * b;
-        document.getElementById('result').innerText = c;
+        let number1 = +document.getElementById('number1').value;
+        let number2 = +document.getElementById('number2').value;
+        let multi = number1 * number2;
+        document.getElementById('result').innerText = multi;
     }
     function divNumber(){
-        let a = +document.getElementById('number1').value;
-        let b = +document.getElementById('number2').value;
-        let c = a / b;
-        document.getElementById('result').innerText = c;
+        let number1 = +document.getElementById('number1').value;
+        let number2 = +document.getElementById('number2').value;
+        let div = number1 / number2;
+        document.getElementById('result').innerText = div;
     }
 
 </script>
