--- a/ss8_cau_truc_dieu_kien_1/bai_tap/bai_tap_5.html
+++ b/ss8_cau_truc_dieu_kien_1/bai_tap/bai_tap_5.html
@@ -6,23 +6,23 @@
 </head>
 <body>
 <form action="/student" method="get">
-    <div>Điểm Bài Kiểm Tra <input type="number" id="numA"></div>
-    <div>Điểm Thi Giữa Kì <input type="number" id="numB"></div>
-    <div>Điểm Thi Cuối Kì <input type="number" id="numC"></div>
+    <div>Điểm Bài Kiểm Tra <input type="number" id="numberA"></div>
+    <div>Điểm Thi Giữa Kì <input type="number" id="numberB"></div>
+    <div>Điểm Thi Cuối Kì <input type="number" id="numberC"></div>
     <button type="button" onclick="getValue()">Result</button>
     <div id="result"></div>
 </form>
 </body>
 <script>
     function getValue(){
-        let numA = +document.getElementById('numA').value;
-        let numB = +document.getElementById('numB').value;
-        let numC = +document.getElementById('numC').value;
-        let numD = numA*1/10 + numB*3/10+ numC*6/10
-        if (numD<6.5){
+        let numberA = +document.getElementById('numberA').value;
+        let numberB = +document.getElementById('numberB').value;
+        let numberC = +document.getElementById('numberC').value;
+        let numberD = numberA*1/10 + numberB*3/10+ numberC*6/10
+        if (numberD<6.5){
             document.getElementById('result').innerText = 'Học sinh trung bình'
         }
-        else if (numD<8){
+        else if (numberD<8){
             document.getElementById('result').innerText = 'Học sinh tiên tiến'
         }
         else {
