--- a/ss8_cau_truc_dieu_kien_1/bai_tap/bai_tap_3.html
+++ b/ss8_cau_truc_dieu_kien_1/bai_tap/bai_tap_3.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <form action="/student" method="student">
-    <div>Nhập vào a <input type="number" id="num"></div>
+    <div>Nhập vào a <input type="number" id="number"></div>
     <button type="button" onclick="getValue()">Result</button>
     <div id="result"></div>
 </form>
 </body>
 <script>
     function getValue() {
-        let num = +document.getElementById('num').value;
-        if (!(num % 1)) {
-            if (num > 0) {
+        let number = +document.getElementById('number').value;
+        if (!(number % 1)) {
+            if (number > 0) {
                 document.getElementById('result').innerText = 'a lớn hơn 0';
             }
-            else if (num == 0) {
+            else if (number == 0) {
                 document.getElementById('result').innerText = 'a bằng 0';
             }
             else {
