--- a/ss8_cau_truc_dieu_kien_1/bai_tap/tinh_chi_so_can_nang_cua _co_the.html
+++ b/ss8_cau_truc_dieu_kien_1/bai_tap/tinh_chi_so_can_nang_cua _co_the.html
@@ -7,8 +7,8 @@
 <body>
 <h1>Tính Chỉ Số Cân Nặng Của Cơ Thể</h1>
 <form action="/student" method="get">
-    <div>Chiều cao <input type="number" id="height"></div>
-    <div>Cân nặng <input type="number" id="weight"></div>
+    <div>Chiều cao (m) <input type="number" id="height"></div>
+    <div>Cân nặng (kg) <input type="number" id="weight"></div>
     <button type="button" onclick="getValue()">Result</button>
 </form>
 </body>
