--- a/ss8_cau_truc_dieu_kien_1/bai_tap/tinh_chi_so_can_nang_cua _co_the.html
+++ b/ss8_cau_truc_dieu_kien_1/bai_tap/tinh_chi_so_can_nang_cua _co_the.html
@@ -14,8 +14,8 @@
 </body>
 <script>
     function getValue() {
-        let height = +document.getElementById('height').value;
-        let weight = +document.getElementById('weight').value;
+        let height = document.getElementById('height').value;
+        let weight = document.getElementById('weight').value;
         let bmi = weight / (height * height);
         if (bmi < 18.5) {
             document.write("Underweight");
