--- a/ss9_cau_truc_dieu_kien_2/bai_tap/bai_6_phuong_trinh_bac_1.html
+++ b/ss9_cau_truc_dieu_kien_2/bai_tap/bai_6_phuong_trinh_bac_1.html
@@ -23,7 +23,8 @@
             else {
                 document.getElementById('result').innerText = 'phương trình vô nghiệm';
             }
-        }else {
+        }
+        else {
             document.getElementById('result').innerText = 'x = ' +numX;
         }
     }
