--- a/ss10_vong_lap/bai_tap/bai_5_tinh_tong_20_so_fibonucci.html
+++ b/ss10_vong_lap/bai_tap/bai_5_tinh_tong_20_so_fibonucci.html
@@ -16,7 +16,7 @@
         numB = fibonacci;
         sum += fibonacci;
     }
-        document.write(sum + '<br>');
+        document.write(sum );
 
 </script>
 </body>
